[package]
name = "ncch_dec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
derivative = "2.2.0"
embedded-graphics = { version = "0.8.1", optional = true }
redox_simple_endian = "0.2.1"
static_assertions = "1.1.0"

[features]
default = ["embedded_graphics"]
embedded_graphics = ["dep:embedded-graphics"]
