[package]
name = "cytryna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
bitflags = "2.4.1"
bmp = "0.5.0"
cbc = { version = "0.1.2", features = ["alloc"] }
ctr = { version = "0.9.2", features = ["std"] }
derivative = { version = "2.2.0", features = ["use_core"] }
hex = "0.4.3" # FIXME: no_std blocker
hex-literal = "0.4.1"
memoffset = "0.9.0"
modular-bitfield = "0.11.2"
sha2 = { version = "0.10.8", default-features = false }
snafu = { version = "0.7.5", default-features = false, features = ["rust_1_39", "rust_1_46", "rust_1_61"] }
static_assertions = "1.1.0"

[dev-dependencies]
rand = "0.8.5"
