[package]
name = "cytryna"
version = "0.1.3"
edition = "2021"
license-file = "./LICENSE.txt"
description = "A library for handling 3DS file types"
homepage = "https://github.com/Maccraft123/cytryna"
repository = "https://github.com/Maccraft123/cytryna"
keywords = ["horizon", "3ds"]
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
bitflags = "2.4"
bmp = "0.5"
cbc = { version = "0.1", features = ["alloc"] }
ctr = { version = "0.9", features = ["std"] }
derivative = "2.2"
hex = "0.4"
hex-literal = "0.4"
image = { version = "0.24", default-features = false }
memoffset = "0.9"
modular-bitfield = "0.11"
sha2 = "0.10"
static_assertions = "1.1"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
