[package]
name = "cytryna"
version = "0.1.3"
edition = "2021"
license-file = "./LICENSE.txt"
description = "A library for handling 3DS file types"
homepage = "https://github.com/Maccraft123/cytryna"
repository = "https://github.com/Maccraft123/cytryna"
keywords = ["horizon", "3ds"]
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "cia", "firm", "ncch", "smdh" ]
cia = ["crypto", "derivative"]
firm = ["hash"]
ncch = ["crypto", "derivative"]
smdh = ["dep:bmp", "dep:image"]

hash = ["dep:sha2"]
crypto = ["dep:aes", "dep:cbc", "dep:ctr"]

[dependencies]
aes = { version = "0.8", optional = true }
bitfield-struct = "0.5.5"
bitflags = "2.4"
bmp = { version = "0.5", optional = true }
cbc = { version = "0.1", features = ["alloc"], optional = true }
ctr = { version = "0.9", features = ["std"], optional = true }
derivative = { version = "2.2", optional = true }
derive_more = { version = "0.99.17", features = ["from", "display", "error"], default-features = false }
hex = "0.4"
hex-literal = "0.4"
image = { version = "0.24", default-features = false, optional = true }
memoffset = "0.9"
sha2 = { version = "0.10", optional = true }
static_assertions = "1.1"

[dev-dependencies]
rand = "0.8"
