[package]
name = "mk3dsx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
cytryna = { path = "../cytryna" }
goblin = { version = "0.7.1", default-features = false, features = ["elf32", "elf64", "endian_fd", "std"] }
